@startuml

title __APEARCHIPELAGO's Class Diagram__\n

  package  {
    package GUIComponents {
      class CommandBox {
      }
    }
  }
  

  package  {
    package Entities {
      class Cycle {
      }
    }
  }
  

  package  {
    package Entities {
      class DecorativeEntity {
      }
    }
  }
  

  package  {
    package Entities {
      abstract class Entity {
      }
    }
  }
  

  package  {
    package GUIComponents {
      class EntityView {
      }
    }
  }
  

  package  {
    package GUIComponents {
      class GamePane {
      }
    }
  }
  

  package  {
    package Entities {
      class InteractableEntity {
      }
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    package Entities {
      class Player {
      }
    }
  }
  

  package  {
    package GUIComponents {
      class PrimaryView {
      }
    }
  }
  

  CommandBox -up-|> BorderPane
  CommandBox o-- CommandList : commandList
  CommandBox o-- Inventory : inventory
  CommandBox o-- Command : currentCommand
  DecorativeEntity -up-|> Entity
  EntityView o-- PrimaryView : main
  GamePane -up-|> StackPane
  GamePane o-- PrimaryView : parent
  InteractableEntity -up-|> Entity
  InteractableEntity o-- CustomImageView : imView
  InteractableEntity o-- PrimaryView : main
  Main -up-|> Application
  Player -up-|> InteractableEntity
  Player o-- Cycle : currentCycle
  PrimaryView -up-|> VBox
  PrimaryView o-- EntityView : entityView
  PrimaryView o-- GamePane : gamePane
  PrimaryView o-- CommandBox : commandBox


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
